--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-dropzone": "^11.3.4"
+    "react-dropzone": "^11.3.4",
+    "react-material-ui-carousel": "^2.3.1"
   }
 }
