--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "formik": "^2.2.9",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.4",
-    "react-material-ui-carousel": "^2.3.1"
+    "react-material-ui-carousel": "^2.3.1",
+    "yup": "^0.32.9"
   }
 }
