--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.22.0",
     "bcrypt": "^5.0.1",
     "formik": "^2.2.9",
+    "mongodb": "3.5.9",
     "mongoose": "^6.0.9",
     "next": "11.1.2",
     "next-auth": "^3.29.0",
